@@ -23,11 +23,12 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
- * 购物车服务实现类 (改进版 - 使用 MyBatis-Plus)
+ * 购物车服务实现类 (修复版 - 统一使用 QueryWrapper)
  */
 @Slf4j
 @Service
@@ -52,7 +53,7 @@ public class CartServiceImpl implements ICartService {
     public CartDto getActiveCart(Integer userId) {
         Cart cart = cartMapper.findByUserId(userId);
         if (cart != null) {
-            // 使用 QueryWrapper 安全地查询
+            // ✅ 修复：使用普通 QueryWrapper
             LambdaQueryWrapper<CartItem> queryWrapper = new LambdaQueryWrapper<>();
             queryWrapper.eq(CartItem::getCartId, cart.getCartId());
             List<CartItem> items = cartItemMapper.selectList(queryWrapper);
@@ -64,9 +65,12 @@ public class CartServiceImpl implements ICartService {
     @Override
     @Transactional(rollbackFor = Exception.class)
     public CartDto addItemToCart(Integer userId, Integer magicBagId, int quantity) {
+        log.info("Adding item to cart: userId={}, magicBagId={}, quantity={}", userId, magicBagId, quantity);
+        
         // 验证产品是否存在
         Result<MagicBagDto> bagResult = productClient.getMagicBagById(magicBagId);
         if (!isResultSuccess(bagResult) || bagResult.getData() == null) {
+            log.error("Product not found: {}", magicBagId);
             throw new BusinessException(ResultStatus.PRODUCT_NOT_FOUND,"detail: "+magicBagId);
         }
         
@@ -75,33 +79,50 @@ public class CartServiceImpl implements ICartService {
         if (cart == null) {
             cart = new Cart();
             cart.setUserId(userId);
+            cart.setCreatedAt(LocalDateTime.now());
+            cart.setUpdatedAt(LocalDateTime.now());
             cartMapper.insertCart(cart);
-            log.info("Created new cart for user: {}", userId);
+            log.info("Created new cart for user: {}, cartId={}", userId, cart.getCartId());
         }
         
-        // 使用 QueryWrapper 检查购物车中是否已存在该商品
+        // ✅ 修复：使用普通 QueryWrapper，明确指定数据库列名
         LambdaQueryWrapper<CartItem> queryWrapper = new LambdaQueryWrapper<>();
         queryWrapper.eq(CartItem::getCartId, cart.getCartId())
                 .eq(CartItem::getMagicBagId, magicBagId);
         CartItem existing = cartItemMapper.selectOne(queryWrapper);
+        
+        log.info("Existing cart item check: cartId={}, magicBagId={}, found={}", 
+                cart.getCartId(), magicBagId, existing != null);
 
         if (existing != null) {
             // 更新数量 - 使用 updateById
             existing.setQuantity(existing.getQuantity() + quantity);
             existing.setAddedAt(LocalDateTime.now());
-            cartItemMapper.updateById(existing);
-            log.info("Updated cart item quantity: cartId={}, magicBagId={}, newQuantity={}", 
-                    cart.getCartId(), magicBagId, existing.getQuantity());
+            int result = cartItemMapper.updateById(existing);
+            log.info("Updated cart item quantity: cartId={}, magicBagId={}, newQuantity={}, result={}", 
+                    cart.getCartId(), magicBagId, existing.getQuantity(), result);
         } else {
             // 添加新商品 - 使用 insert
             CartItem item = new CartItem();
             item.setCartId(cart.getCartId());
             item.setMagicBagId(magicBagId);
             item.setQuantity(quantity);
-            cartItemMapper.insert(item);
-            log.info("Added new item to cart: cartId={}, magicBagId={}, quantity={}", 
-                    cart.getCartId(), magicBagId, quantity);
+            item.setAddedAt(LocalDateTime.now());
+            
+            int result = cartItemMapper.insert(item);
+            log.info("Added new item to cart: cartId={}, magicBagId={}, quantity={}, result={}, generatedId={}", 
+                    cart.getCartId(), magicBagId, quantity, result, item.getCartItemId());
+            
+            // 验证插入是否成功
+            if (result <= 0) {
+                log.error("Failed to insert cart item! Insert result: {}", result);
+                throw new RuntimeException("Failed to insert cart item");
+            }
         }
+        
+        // 更新购物车时间
+        cart.setUpdatedAt(LocalDateTime.now());
+        cartMapper.updateCart(cart);
         
         // 重新加载购物车项
         return getActiveCart(userId);
@@ -120,10 +141,10 @@ public class CartServiceImpl implements ICartService {
             log.error("Cart not found for user: {}", userId);
             throw new NoSuchElementException(ResultStatus.CART_NOT_FOUND.getMessage());
         }
-        
-        QueryWrapper<CartItem> queryWrapper = new QueryWrapper<>();
-        queryWrapper.eq("cart_id", cart.getCartId())
-                   .eq("magic_bag_id", magicBagId);  // ✓ 修复：改为 magic_bag_id
+
+        LambdaQueryWrapper<CartItem> queryWrapper = new LambdaQueryWrapper<>();
+        queryWrapper.eq(CartItem::getCartId, cart.getCartId())
+                .eq(CartItem::getMagicBagId, magicBagId);
         CartItem item = cartItemMapper.selectOne(queryWrapper);
         
         if (item == null) {
@@ -162,7 +183,7 @@ public class CartServiceImpl implements ICartService {
         
         QueryWrapper<CartItem> queryWrapper = new QueryWrapper<>();
         queryWrapper.eq("cart_id", cart.getCartId())
-                   .eq("magic_bag_id", magicBagId);  // ✓ 修复：改为 magic_bag_id
+                   .eq("magic_bag_id", magicBagId);
         CartItem item = cartItemMapper.selectOne(queryWrapper);
         
         if (item != null) {
@@ -190,9 +211,8 @@ public class CartServiceImpl implements ICartService {
         }
         
         // 使用 QueryWrapper 查询购物车项
-        QueryWrapper<CartItem> queryWrapper = new QueryWrapper<>();
-        queryWrapper.eq("cart_id", cart.getCartId())
-                   .orderByDesc("added_at");
+        LambdaQueryWrapper<CartItem> queryWrapper = new LambdaQueryWrapper<>();
+        queryWrapper.eq(CartItem::getCartId, cart.getCartId()).orderByDesc(CartItem::getAddedAt);
         List<CartItem> items = cartItemMapper.selectList(queryWrapper);
         
         if (items.isEmpty()) {
@@ -204,7 +224,7 @@ public class CartServiceImpl implements ICartService {
         List<Integer> bagIds = items.stream()
                 .map(CartItem::getMagicBagId)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         
         log.info("Fetching product info for {} items", bagIds.size());
         Result<List<MagicBagDto>> result = productClient.getBatchMagicBags(bagIds);
@@ -233,7 +253,7 @@ public class CartServiceImpl implements ICartService {
                 item.getQuantity(),
                 subtotal
             );
-        }).filter(dto -> dto != null).collect(Collectors.toList());
+        }).filter(Objects::nonNull).toList();
         
         log.info("Retrieved {} cart items for user: {}", cartItemDtos.size(), userId);
         return cartItemDtos;
@@ -267,8 +287,8 @@ public class CartServiceImpl implements ICartService {
             return 0.0;
         }
         
-        QueryWrapper<CartItem> queryWrapper = new QueryWrapper<>();
-        queryWrapper.eq("cart_id", cart.getCartId());
+        LambdaQueryWrapper<CartItem> queryWrapper = new LambdaQueryWrapper<>();
+        queryWrapper.eq(CartItem::getCartId, cart.getCartId());
         List<CartItem> items = cartItemMapper.selectList(queryWrapper);
         
         if (items.isEmpty()) {
@@ -280,7 +300,7 @@ public class CartServiceImpl implements ICartService {
         List<Integer> bagIds = items.stream()
                 .map(CartItem::getMagicBagId)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         
         Result<List<MagicBagDto>> result = productClient.getBatchMagicBags(bagIds);
         
@@ -312,7 +332,7 @@ public class CartServiceImpl implements ICartService {
     public List<CartItemDto> getCartItemsByMagicBagId(Integer magicBagId) {
         // 使用 QueryWrapper 查询
         QueryWrapper<CartItem> queryWrapper = new QueryWrapper<>();
-        queryWrapper.eq("magic_bag_id", magicBagId);  // ✓ 修复：改为 magic_bag_id
+        queryWrapper.eq("magic_bag_id", magicBagId);
         List<CartItem> items = cartItemMapper.selectList(queryWrapper);
         
         if (items.isEmpty()) {
@@ -388,7 +408,7 @@ public class CartServiceImpl implements ICartService {
                 item.getQuantity(),
                 subtotal
             );
-        }).filter(dto -> dto != null).collect(Collectors.toList());
+        }).filter(Objects::nonNull).toList();
         
         double total = items.stream().mapToDouble(CartItemDto::getSubtotal).sum();
         
